--- a/style.css
+++ b/style.css
@@ -22,8 +22,12 @@ img{
   display:none;
 }
 
+#projectdiv{
+  display: none;
+}
+
 .topnav {
-  background-color: #333;
+  background-color: grey;
   overflow: hidden;
 }
 
@@ -44,7 +48,51 @@ img{
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+#button {
+  transition-duration: 0.4s;
+  border: none;
+  color: darkgrey;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+
+#button:hover {
+  background-color: darkblue; /* Green */
+  color: white; /* Green */
+}
+
+#linktreebutton {
+  transition-duration: 0.4s;
+  border: none;
+  color: darkgrey;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+
+#linktreebutton:hover {
+  background-color: darkblue; /* Green */
+  color: white; /* Green */
+}
+
+#linktreetext{
+  color: grey;
+  text-decoration: none;
+}
+
+#hide{
+    background-color: white; 
+  color: black; }
+  
+#mainprojectbutton{
+  background-color: white; 
+  color: black; 
+  border: 2px solid #f44336;
 }
